# docs/swagger.json
@@ -333,7 +333,7 @@
                 }
             }
         },
-        "/applications/{id}/issuer_keys": {
+        "/applications/{id}/issuer-keys": {
             "get": {
                 "description": "Get all issuer keys for a specific application",
                 "consumes": [
@@ -470,7 +470,7 @@
                 }
             }
         },
-        "/applications/{id}/issuer_keys/{issuerKeyId}": {
+        "/applications/{id}/issuer-keys/{issuerKeyId}": {
             "delete": {
                 "description": "Delete an issuer key for a specific application",
                 "consumes": [
